<resources>
    <string name="app_name">CrimsonSkillBoostMobileV2</string>
    <string name="app_Name">Crimson Skill Boost</string>
    <string name="logo">Logo</string>
    <string name="background">Bckground</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_your_account">Create your account</string>
    <string name="please_use_your_real_name_to_ensure_your_professor_can_accurately_recognize_you">Please use your real name to ensure your professor can accurately recognize you.</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="description1">Enter a valid email and unique username for secure access and recognition.</string>
    <string name="email">Email</string>
    <string name="username1">Username1</string>
    <string name="username">Username</string>
    <string name="back_to_previous_page">back to previous page</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="email_confirmation">To confirm your account, enter the 6-digit code we sent to your email</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="create_password">Create Password</string>
    <string name="password_desc">Create a password with at least 6 characters, including a lowercase letter, an uppercase letter, a number, and a special character.</string>
    <string name="pass">Password</string>

    <string name="html_text">
   People who use our platform may have their account details shared with their assigned professors for academic purposes.\n
   &lt;a href="https://yourwebsite.com/learnmore">Learn more&lt;/a>\n


   \nBy tapping I agree, you confirm that you \nhave read and accepted CrimsonSkillBoost&#8217;s
   &lt;a href="https://yourwebsite.com/terms">Terms&lt;/a>,
   &lt;a href="https://yourwebsite.com/privacy">Privacy Policy&lt;/a>, and
   &lt;a href="https://yourwebsite.com/cookies">Cookies Policy&lt;/a>. \n \n


       The Privacy Policy explains how we collect,\n
       use, and protect your data when you\n
       create an account. For example, we use\n
       this information to enhance learning\n
       experiences, provide personalized\n
       recommendations, and improve platform\n
       features.
</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="set_up_desc">Upload a clear and professional image to help your professor recognize you.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="username_placeholder">username placeholder</string>
    <string name="email_placeholder">email placeholder</string>
    <string name="your_bio">Your Bio</string>
    <string name="App_name_header">Crimson Skill Boost</string>
    <string name="welcomeTxt">Welcome to Crimson Skill Boost Username</string>
    <string name="welcomeTxt2">Your tech journey begins here!</string>
    <string name="search_courses">Search courses...</string>
    <string name="home">Home</string>
    <string name="path">Path</string>
    <string name="account">account</string>
    <string name="no_courses_available_yet">No courses available yet.</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="available_courses">Available Courses</string>
    <string name="subject_desc">Explore the basics of game design and development, and start creating your own games from scratch.</string>
    <string name="subject_name">Game Development</string>
    <string name="pending_approval_icon">Pending Approval Icon</string>
    <string name="percentage">0%</string>
    <string name="subject_icon">Subject Icon</string>
    <string name="backbtn">Backbtn</string>
    <string name="courseOverviewDesc">SLorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida magna nec quam vestibulum, ornare ullamcorper nulla tristique. In posuere metus massa, vel fermentum ipsum ullamcorper quis. Praesent turpis tellus, tempus vitae posuere id, efficitur non augue. Aenean in nulla at neque eleifend placerat. Mauris porttitor viverra dolor. Nulla ornare.</string>
    <string name="course_overview">Course Overview</string>
    <string name="subject_title">Mobile Development</string>
    <string name="back">Back</string>
    <string name="course_overview_desc">Explore the basics of game design and development, and start creating your own games from scratch. Gain hands-on experience with game engines, storytelling, and interactive mechanics to bring your ideas to life.</string>
    <string name="topic_overview">Topic Overview</string>
    <string name="requirements_prerequisites">Requirements / Prerequisites</string>
    <string name="requirements_desc">Basic knowledge of programming (preferably in Java, Kotlin, or JavaScript) and understanding of how mobile devices work. Familiarity with HTML, CSS, and basic app structures is a plus.</string>
    <string name="enroll_btn">Enroll</string>
    <string name="prof_email">kallen.charles@gmail.com</string>
    <string name="topic_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut auctor mauris. Aliquam eget massa sit amet libero posuere viverra eget ut ligula. Sed feugiat quis neque ac dictum. Nulla nec risus pellentesque, scelerisque leo sed, iaculis diam. Duis vehicula commodo libero. Vivamus ac mi felis. Cras accumsan lectus odio.</string>
    <string name="hometask_icon">HomeTask_icon</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="jerine_carl_m_diaz">Jerine Carl M. Diaz</string>
    <string name="course_progress">Course Progress</string>
    <string name="quiz_name">Quiz 1: Conditional Statement</string>
    <string name="question">What is the correct syntax for an if statement in Java?</string>
    <string name="option_1">Option 1</string>
    <string name="next">Next</string>
    <string name="course_subject">Computer Programming</string>
    <string name="forgot_passwordpath">Forgot Password?</string>
    <string name="forgot_password_desc">Enter your email address below and we’ll send you a verification code to reset your password.</string>
    <string name="email_address">Email address</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verification_desc">We’ve sent a 6-digit code to your email. Please enter it below to verify your identity.</string>
    <string name="set_new_password">Set New Password</string>
    <string name="desc">Create a strong password with at least 8 characters, including uppercase and lowercase letters, a number, and a special character.</string>
    <string name="pass_reset_desc">Your password has been updated. You can now log in with your new credentials.</string>
    <string name="email_forgot">We couldn’t find an account with that email. Please check the spelling or try a different one.</string>
    <string name="text_placeholder">Score: 10 /10</string>
    <string name="quiz2_coursename">Calculus</string>
    <string name="quiz_name_course">Computer Programming</string>
    <string name="topic_name">Introduction to DSA</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>