<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Search bar -->
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/logins_textfield"
        android:drawableStart="@drawable/search"
        android:hint="@string/search_courses"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Tab Layout (Enrolled / Available) -->
    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintWidth_percent="0.9">

        <Button
            android:id="@+id/btnEnrolledCourses"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:background="@drawable/button_style3"
            android:fontFamily="@font/poppins_light"
            android:text="@string/enrolled_courses"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnAvailableCourses"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:background="@drawable/bg_button_selected"
            android:fontFamily="@font/poppins_light"
            android:text="@string/available_courses"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

    <!-- Empty State Text -->
    <TextView
        android:id="@+id/emptyStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/no_courses_available_yet"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    <!-- RecyclerView (for enrolled / available courses) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCourses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomNavLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottomNavLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_selected"
            android:contentDescription="@string/home"
            android:src="@drawable/home"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="20dp" />

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_unselected"
            android:contentDescription="@string/account"
            android:src="@drawable/account"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
