<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:layout_editor_absoluteX="53dp"
    tools:layout_editor_absoluteY="-141dp">


    <ImageView
        android:id="@+id/new_backbtn4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/back_to_previous_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


    <TextView
        android:id="@+id/new_header4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_passwordpath"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_backbtn4" />


    <TextView
        android:id="@+id/new_description4"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/new_header4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/new_header4"
        app:layout_constraintTop_toBottomOf="@+id/new_header4"
        app:layout_constraintWidth_percent="0.9"
        android:lineSpacingExtra="4dp"
        />


    <EditText
        android:id="@+id/new_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/logins_textfield"
        android:drawableTint="#A9A9A9"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email_address"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#A9A9A9"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_description4"
        app:layout_constraintVertical_bias="0.081"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/sendcode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/button_style"
        android:fontFamily="@font/poppins_medium"
        android:text="Send Code"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/new_pass"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="@+id/new_pass"
        app:layout_constraintTop_toBottomOf="@+id/new_pass"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="HardcodedText,TextContrastCheck,VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
