<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <VideoView
        android:id="@+id/backgroundVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/appnameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/App_name_header"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImageView" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="152dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/upload_image"
        android:focusable="true"
        android:foregroundGravity="center_horizontal"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="@+id/profileImageView" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcomeTxt"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applogo"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/welcomeTxt2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/welcomeTxt2"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcomeTxt"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>